# secret-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  index.yaml
.github/workflows/: build-push.yaml  helm-release.yaml
charts/: Chart.yaml
charts/secret-sync/: Chart.yaml  values.yaml
charts/secret-sync/static/: crds.yaml
charts/secret-sync/templates/: crds.yaml  deployment.yaml  rbac.yaml
charts/templates/: sa.yaml
helm/templates/: deployment.yaml  rbac.yaml
src/: crds.rs  lib.rs  main.rs
tests/: k3s_integration.rs
tests/manifests/: secret.yaml  syncer.yaml
