[package]
name = "secret-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.22", features = ["derive"] }

kube = { version = "0.99.0", features = ["runtime", "derive"] }
kube-derive = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
